cluster/beekeeper/api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: beekeeper-api
    component: api
    part-of: beehive
    project: beekeeper
    confidentiality: not-defined
    compliance: not-defined
  name: beekeeper-api
  namespace: beekeeper
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: beekeeper-api
  template:
    metadata:
      labels:
        app: beekeeper-api
        component: api
        part-of: beehive
        project: beekeeper
        confidentiality: not-defined
        compliance: not-defined
    spec:
      imagePullSecrets:
        - name: beekeeper-pull-token
      containers:
        - name: api
          image: registry.login.no/tekkom/web/beehive/beekeeper/api:1.1.2-dev
          imagePullPolicy: IfNotPresent
          command: ["sh", "-c"]
          args: ["./init.sh"]
          ports:
            - containerPort: 8080
              name: 8080tcp
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
            limits:
              memory: 512Mi
              cpu: 1000m
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - beekeeper-api
                topologyKey: kubernetes.io/hostname
